array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var nbri:Int=0
  for (i <- 1 to num.size) {
    var k:Int= num(i)
    if (k==0) {
      nbri=nbri+1
  return nbri
    }
  }
}